src/test/ui/mismatched_types/closure-arg-count.stderr
error[E0593]: closure takes 0 arguments but 2 arguments are required
  --> $DIR/closure-arg-count.rs:15:15
   |
15 |     [1, 2, 3].sort_by(|| panic!());
   |               ^^^^^^^ ----------- takes 0 arguments
   |               |
   |               expected closure that takes 2 arguments

error[E0593]: closure takes 1 argument but 2 arguments are required
  --> $DIR/closure-arg-count.rs:16:15
   |
16 |     [1, 2, 3].sort_by(|tuple| panic!());
   |               ^^^^^^^ ---------------- takes 1 argument
   |               |
   |               expected closure that takes 2 arguments

error[E0308]: mismatched types
  --> $DIR/closure-arg-count.rs:17:24
   |
17 |     [1, 2, 3].sort_by(|(tuple, tuple2)| panic!());
   |                        ^^^^^^^^^^^^^^^ expected &{integer}, found tuple
   |
   = note: expected type `&{integer}`
              found type `(_, _)`

error[E0593]: closure takes 1 argument but 2 arguments are required
  --> $DIR/closure-arg-count.rs:17:15
   |
17 |     [1, 2, 3].sort_by(|(tuple, tuple2)| panic!());
   |               ^^^^^^^ -------------------------- takes 1 argument
   |               |
   |               expected closure that takes 2 arguments

error[E0593]: closure takes 0 arguments but 1 argument is required
  --> $DIR/closure-arg-count.rs:18:5
   |
18 |     f(|| panic!());
   |     ^ ----------- takes 0 arguments
   |     |
   |     expected closure that takes 1 argument
   |
   = note: required by `f`

error: aborting due to 5 previous errors

